--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.9",
     "@types/redux-thunk": "^2.1.0"
   }
 }
